--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "e2e": "detox test --configuration ios.sim",
+    "dl_expo_bins": "./scripts/dl_expo_bins"
   },
   "jest": {
     "preset": "jest-expo"
@@ -18,7 +20,6 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
-    "@types/jest": "^27.0.3",
     "expo": "~43.0.2",
     "expo-asset": "~8.4.3",
     "expo-constants": "~12.1.3",
@@ -36,10 +37,31 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/detox": "^18.1.0",
+    "@types/jasmine": "^3.10.2",
+    "@types/jest": "^27.0.3",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-expo": "^8.5.1",
+    "detox": "^19.1.0",
+    "detox-expo-helpers": "^0.6.0",
+    "expo-detox-hook": "^1.0.10",
+    "jest": "^26.4.2",
     "jest-expo": "~43.0.0",
+    "ts-jest": "^26.4.2",
     "typescript": "~4.3.5"
+  },
+  "detox": {
+    "configurations": {
+      "ios.sim": {
+        "binaryPath": "bin/Exponent.app",
+        "type": "ios.simulator",
+        "name": "iPhone 11"
+      }
+    },
+    "test-runner": "jest",
+    "specs": ""
   },
   "private": true
 }
