--- a/package.json
+++ b/package.json
@@ -46,10 +46,11 @@
     "@types/react-native": "~0.64.12",
     "babel-polyfill": "^6.26.0",
     "babel-preset-expo": "^8.5.1",
-    "detox": "^19.1.0",
+    "detox": "^17.14.9",
     "detox-expo-helpers": "^0.6.0",
     "expo-detox-hook": "^1.0.10",
     "jest": "^26.4.2",
+    "jest-circus": "^27.3.1",
     "jest-expo": "~43.0.0",
     "ts-jest": "^26.4.2",
     "typescript": "~4.3.5"
